--- a/home.css
+++ b/home.css
@@ -40,7 +40,7 @@ body {
 
         /* Optional: Visual feedback on hover */
         .vending-machine-clickable:hover {
-            background-color: rgb(213, 13, 13);
+            background-color: rgba(255, 255, 255, 0.1);
             border-radius: 20px;
         }
 
